--- a/index.html
+++ b/index.html
@@ -1,66 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">  
+    <title>Todo List</title>
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="task-input">
+        <img src="bars-icon.svg" alt="icon">
+        <input type="text" placeholder="Add a new task">
+      </div>
+      <div class="controls">
+        <div class="filters">
+          <span class="active" id="all">All</span>
+          <span id="pending">Pending</span>
+          <span id="completed">Completed</span>
+        </div>
+        <button class="clear-btn">Clear All</button>
+      </div>
+      <ul class="task-box"></ul>
+    </div>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content=
-		"width=device-width, initial-scale=1.0">
+    <script src="script.js"></script>
 
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-		integrity=
-"sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-		crossorigin="anonymous">
-
-	<script src="app.js"></script>
-
-	<title>To Do List</title>
-	
-</head>
-
-<body>
-	<header class="bg-success text-white p-5">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12">
-					<font face="Comic sans MS"
-						size="11" color="black">
-						<strong>To-Do List</strong>
-					</font>
-					
-				</div>
-			</div>
-		</div>
-	</header>
-
-	<div class="container mt-3">
-		<h2>Add Items</h2>
-
-		<label id="lblsuccess" class="text-success"
-				style="display: none;">
-		</label>
-		
-		<form id="addForm">
-			<div class="row">
-				<div class="col-lg-7 col-md-7 col-sm-7">
-
-					<input type="text" onkeyup=
-						"toggleButton(this, 'submit')"
-						class="form-control" id="item">
-				</div>
-
-				<div class="col-lg-5 col-md-5 col-sm-5">
-				<input type="submit" class="btn btn-dark"
-						id="submit" value="Submit" disabled>
-				</div>
-			</div>
-		</form>
-
-		<h3 class="mt-4">Tasks</h3>
-
-		<form id="addForm">
-			<ul class="list-group" id="items"></ul>
-		</form>
-	</div>
-</body>
-
+  </body>
 </html>
